# adapta-gtk-theme

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  index.theme  index.theme-nokto
extra/: .Xresources  Makefile.am
extra/chrome/: adapta-nokto-theme.crx  adapta-theme.crx
extra/chrome/adapta-nokto-theme/: Cached Theme.pak  manifest.json
extra/chrome/adapta-theme/: Cached Theme.pak  manifest.json
extra/firefox/adapta-nokto-theme/: manifest.json
extra/firefox/adapta-theme/: manifest.json
extra/gedit/: README.md  adapta-brila.xml  adapta.xml
extra/plank/: dock-dark.theme  dock-light.theme  dock.theme
extra/telegram/: adapta-brila.tdesktop-theme  adapta-nokto.tdesktop-theme  adapta.tdesktop-theme
extra/telegram/dark/: colors.tdesktop-theme
extra/telegram/light/: colors.tdesktop-theme
extra/telegram/mixed/: colors.tdesktop-theme
extra/tweetdeck/: recolor-cdk.sh
extra/tweetdeck/dark/: ColorDeck-adapta-nokto.cdk.in
extra/tweetdeck/light/: ColorDeck-adapta.cdk.in
gtk/: Makefile.am  index.theme  index.theme-brila  index.theme-brila-eta  index.theme-eta  index.theme-nokto  index.theme-nokto-eta
gtk/asset/: assets-clone-gtk2.txt  assets-clone-gtk3.txt  assets-gtk2.svg.in  assets-gtk2.txt  assets-gtk3.svg.in  render-assets-gtk2.sh  render-assets-gtk3.sh
gtk/asset/assets-gtk2-scripts/: assets-gtk2-arrow.txt  assets-gtk2-button.txt  assets-gtk2-checkradio.txt  assets-gtk2-column.txt  assets-gtk2-entry.txt  assets-gtk2-handle.txt  assets-gtk2-misc.txt  assets-gtk2-range.txt  assets-gtk2-scrollbar.txt  assets-gtk2-spin.txt  assets-gtk2.txt  clone-assets-gtk2.sh  recolor-assets-gtk2.sh  render-assets-gtk2-arrow.sh  render-assets-gtk2-button.sh  render-assets-gtk2-checkradio.sh  render-assets-gtk2-column.sh  render-assets-gtk2-entry.sh  render-assets-gtk2-handle.sh  render-assets-gtk2-misc.sh  render-assets-gtk2-range.sh  render-assets-gtk2-scrollbar.sh  render-assets-gtk2-spin.sh  render-assets-gtk2.sh
gtk/asset/assets-gtk3-scripts/: assets-clone-gtk3.txt  assets-gtk3-checkbox.txt  assets-gtk3-misc.txt  assets-gtk3-radio.txt  assets-gtk3-slider.txt  assets-gtk3-toggle.txt  assets-gtk3-windowbutton-eta.txt  assets-gtk3-windowbutton.txt  assets-gtk3.txt  clone-assets-gtk3.sh  recolor-assets-gtk3.sh  render-assets-gtk3-checkbox.sh  render-assets-gtk3-misc.sh  render-assets-gtk3-radio.sh  render-assets-gtk3-slider.sh  render-assets-gtk3-toggle.sh  render-assets-gtk3-windowbutton-eta.sh  render-assets-gtk3-windowbutton.sh  render-assets-gtk3.sh
gtk/gtk-2.0/: 3rd-party-dark-eta.rc  3rd-party-dark.rc  3rd-party-eta.rc  3rd-party-light-eta.rc  3rd-party-light.rc  3rd-party.rc  colors-dark.rc.in  colors.rc.in  common-dark-eta.rc  common-dark.rc  common-eta.rc  common.rc  gtkrc  gtkrc-dark  gtkrc-dark-eta  gtkrc-dark.in  gtkrc-eta  gtkrc-light.in  gtkrc.in  misc-dark-eta.rc  misc-dark.rc  misc-eta.rc  misc.rc  parse-gtk2.sh  recolor-gtk2.sh  render-asset.sh
gtk/gtk-3.0/: README  _colors-public.scss  _colors.scss  gtk-dark.css
gtk/gtk-3.18/: gtk-dark.css  gtk.css
gtk/gtk-3.20/: _misc.scss  assets.txt  gtk-dark.css  gtk.css  render-assets.sh
gtk/gtk-3.22/: _drawing.scss  _misc.scss  gtk-dark.css  gtk.css
gtk/sass/: README  compile-gresource.sh  gtk-dark-eta.gresource.xml.in  gtk-dark-legacy.gresource.xml.in  gtk-dark.gresource.xml.in  gtk-eta.gresource.xml.in  gtk-legacy.gresource.xml.in  gtk.gresource.xml.in  parse-sass.sh
gtk/sass/3.18/: _3rd-party.scss  _common.scss  _drawing.scss  _misc.scss  gtk-dark.scss  gtk.scss
gtk/sass/3.20/: _3rd-party.scss  _common.scss  _drawing.scss  _misc.scss  gtk-dark-eta.scss  gtk-dark.scss  gtk-eta.scss  gtk-light-eta.scss  gtk-light.scss  gtk-mixed-eta.scss  gtk-mixed.scss  gtk.scss
gtk/sass/3.22/: _3rd-party.scss  _common.scss  _drawing.scss  _misc.scss  gtk-dark-eta.scss  gtk-dark.scss  gtk-light-eta.scss  gtk-light.scss  gtk-mixed-eta.scss  gtk-mixed.scss  gtk.scss
gtk/sass/3.24/: _3rd-party.scss  _common.scss  _misc.scss  gtk-dark-eta.scss  gtk-dark.scss  gtk-light-eta.scss  gtk-light.scss  gtk-mixed-eta.scss  gtk-mixed.scss
gtk/sass/4.0/: _3rd-party.scss  _common.scss  _misc.scss  gtk-dark-eta.scss  gtk-dark.scss  gtk-eta.scss  gtk-light-eta.scss  gtk-light.scss  gtk-mixed-eta.scss  gtk-mixed.scss
gtk/sass/common/: _3rd-party.scss  _colors-public.scss  _colors.scss  _common.scss  _drawing-legacy.scss  _drawing.scss  _misc.scss  _xfce-notify.scss  xfce-notify-4.0.scss
gtk/sass/xfce-notify/: xfce-notify-4.0-dark.scss  xfce-notify-4.0-light.scss  xfce-notify-4.0-mixed.scss
shell/: Makefile.am
shell/asset/: assets-cinnamon.txt  assets-gnome-shell.txt  assets-unity.txt  assets-xfce.txt  clone-assets-cinnamon.sh  clone-assets-gnome-shell.sh  clone-assets-unity.sh  clone-assets-xfce.sh  render-assets-cinnamon-thumb.sh
shell/cinnamon/: cinnamon.css  cinnamon.scss
shell/cinnamon-nokto/: _drawing.scss  cinnamon.css
shell/gnome-shell/: _colors.scss  gnome-shell-theme.gresource  gnome-shell-theme.gresource.xml  gnome-shell.css
shell/gnome-shell-eta/: gnome-shell-theme.gresource.xml
shell/gnome-shell-nokto/: _colors.scss  gnome-shell-theme.gresource  gnome-shell-theme.gresource.xml  gnome-shell.css
shell/gnome-shell-nokto-eta/: gnome-shell-theme.gresource.xml
shell/sass/: Gemfile  README  compile-gresource.sh  gnome-shell-theme.gresource.sh  parse-sass.sh
shell/sass/cinnamon/: _common-dark.scss  (+4 more)
shell/xfce-notify-4.0/: gtkrc
wm/: Makefile.am
wm/asset/: assets-metacity.txt  assets-xfwm.txt  clone-assets-metacity.sh  render-assets-xfwm.sh
wm/metacity-1/: metacity-theme-2.xml  metacity-theme-3.xml
wm/openbox-3/: compton.conf  max_toggled.xbm  recolor-openbox.sh  themerc  themerc-brila  themerc-brila.in  themerc-nokto  themerc-nokto.in  themerc.in
wm/xfwm4/: close-prelight.xpm  hide-active.xpm  hide-prelight.xpm  hide-pressed.xpm  maximize-active.xpm  menu-pressed.xpm  shade-prelight.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  themerc  title-1-active-shaded.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-5-active.xpm  top-left-active.xpm
(+392 files in other folders)
